styling fix: fixed width when writing short image descriptions.

--- a/ClientResources/Scripts/Editors/themes/MultipleImagesEditor.css
+++ b/ClientResources/Scripts/Editors/themes/MultipleImagesEditor.css
@@ -102,6 +102,7 @@
 .epiMultimediaContainer .multiMediaDesc {
     position: relative;
     white-space: normal;
+    width: 50%;
 }
 .epiMultimediaContainer .textareaContainer {
     position: absolute;
